--- a/config.toml
+++ b/config.toml
@@ -1,13 +1,13 @@
 baseURL = "https://www.doubleopen.org/"
 languageCode = "en-us"
-title = "The Double Open Project"
+title = "Double Open"
 theme = "kube"
-description = "Double Open is a research project aiming to find out how to make open source compliance more open."
+description = "Double Open is a company offering Open Source compliance solutions building on Open Source tools."
 # Paginate = 5
 [Params]
   RSSLink = "/index.xml"
-  author = "The Double Open Project" # add your company name
-  github = "" # add your github profile name
+  author = "Double Open" # add your company name
+  github = "doubleopen-project" # add your github profile name
   twitter = "" # add your twitter profile
   email = ""
 
@@ -31,4 +31,3 @@ description = "Double Open is a research project aiming to find out how to make 
     name = "People & Contacts"
     weight = -97
     url = "/people"
-
